syntax = "proto3";
package core;
option go_package = "api";

service videoInfoService{
  rpc getVideoInfoList(video_info_get_video_info_list_request)  returns (video_info_get_video_info_list_response);
  rpc getVideoInfo(video_info_get_video_info_request) returns (video_info_get_video_info_response);
  rpc getFeed(video_info_get_feed_request)  returns (video_info_get_feed_response);
  rpc getAuthorVideoInfoList(video_info_get_author_video_info_list_request) returns (video_info_get_author_video_info_list_response);
}



message video_info_get_video_info_list_request{
  int64 user_id = 1;
  repeated int64 video_id_list = 2;
}

message video_info_get_video_info_list_response{
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  repeated Video video_list = 3;
}

message video_info_get_video_info_request{
  int64 user_id = 1;
  int64 video_id = 2;
}

message video_info_get_video_info_response{
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  Video video = 3;
}

message video_info_get_feed_request{
  int64 user_id = 1;
  int64 next_time = 2;
}

message video_info_get_feed_response{
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  int64 next_time = 3;
  repeated Video video_list = 4;
}


message video_info_get_author_video_info_list_request{
  int64 user_id = 1;
  int64 author_id = 2;
}
message video_info_get_author_video_info_list_response{
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  repeated Video video_list = 3;
}


message Video {
  int64 id = 1; // 视频唯一标识
  User author = 2; // 视频作者信息
  string play_url = 3; // 视频播放地址
  string cover_url = 4; // 视频封面地址
  int64 favorite_count = 5; // 视频的点赞总数
  int64 comment_count = 6; // 视频的评论总数
  bool is_favorite = 7; // true-已点赞，false-未点赞
  string title = 8; // 视频标题
}

message User {
  int64 id = 1; // 用户id
  string name = 2; // 用户名称
  optional int64 follow_count = 3; // 关注总数
  optional int64 follower_count = 4; // 粉丝总数
  bool is_follow = 5; // true-已关注，false-未关注
  optional string avatar = 6; //用户头像
  optional string background_image = 7; //用户个人页顶部大图
  optional string signature = 8; //个人简介
  optional int64 total_favorited = 9; //获赞数量
  optional int64 work_count = 10; //作品数量
  optional int64 favorite_count = 11; //点赞数量
}